--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -3,6 +3,10 @@ _enabled_editors:
   - content
 
 collections_config:
+  posts:
+    _enabled_editors:
+      - visual
+      - content
   pages:
     path: content/docs
     name: Pages
